--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django>=3.0,<3.1
-wagtail>=2.8,<2.9
+Django==3.0.6
+wagtail==2.9
 psycopg2-binary==2.8.5
 django-countries==6.1.2
 django-allauth==0.41.0
 django-widget-tweaks==1.4.8
+wagtailtrans==2.1
