--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ wagtailcodeblock==1.17.1.0
 django-extensions==2.2.9
 django-modeltranslation==0.15
 django-comments-xtd==2.6.1
+wagtailstreamforms==3.10
+django-recaptcha==2.0.6
